--- a/content/footer/1.mdx
+++ b/content/footer/1.mdx
@@ -2,85 +2,155 @@
 category: footer
 ---
 
-<footer className="bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800">
-  <div className="max-w-6xl mx-auto px-6 py-12">
-    <div className="grid gap-8 md:grid-cols-4">
-      {/* Brand */}
-      <div className="md:col-span-1">
-        <div className="flex items-center mb-4">
-          <div className="w-8 h-8 bg-gradient-to-br from-blue-600 to-purple-600 rounded-lg"></div>
-          <span className="ml-3 text-xl font-bold text-gray-900 dark:text-white">Brand</span>
-        </div>
-        <p className="text-gray-600 dark:text-gray-400 text-sm leading-relaxed">
-          Tworzymy narzędzia, które pomagają rozwijać biznes w cyfrowym świecie.
+<footer className="bg-gradient-to-br from-slate-900 via-gray-800 to-slate-900 relative overflow-hidden">
+  {/* Background Effects */}
+  <div className="absolute inset-0 opacity-20">
+    <div className="absolute inset-0" style={{
+      backgroundImage: `url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fillRule='evenodd'%3E%3Cg fill='%239C92AC' fillOpacity='0.05'%3E%3Ccircle cx='30' cy='30' r='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E")`
+    }}></div>
+  </div>
+  
+  <div className="relative max-w-7xl mx-auto px-6 py-20">
+    {/* Top Section */}
+    <div className="text-center mb-16">
+      <div className="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-cyan-400 to-purple-500 rounded-2xl mb-6 shadow-xl">
+        <svg className="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+        </svg>
+      </div>
+      <h2 className="text-4xl font-bold text-white mb-4 bg-gradient-to-r from-cyan-400 to-purple-400 bg-clip-text text-transparent">
+        Build Something Amazing
+      </h2>
+      <p className="text-slate-300 text-lg max-w-2xl mx-auto leading-relaxed">
+        Join thousands of developers and designers creating the future of digital experiences
+      </p>
+    </div>
+
+    {/* Main Content Grid */}
+    <div className="grid gap-12 lg:grid-cols-5 mb-16">
+      {/* Newsletter Signup */}
+      <div className="lg:col-span-2">
+        <h3 className="text-white font-semibold text-xl mb-4">Stay Updated</h3>
+        <p className="text-slate-300 text-sm mb-6 leading-relaxed">
+          Get the latest updates, tutorials, and insights delivered straight to your inbox.
         </p>
+        <div className="flex gap-3">
+          <input 
+            type="email" 
+            placeholder="Enter your email"
+            className="flex-1 px-4 py-3 bg-white/10 border border-white/20 rounded-lg text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-cyan-400 focus:border-transparent backdrop-blur-sm"
+          />
+          <button className="px-6 py-3 bg-gradient-to-r from-cyan-500 to-purple-600 text-white font-medium rounded-lg hover:from-cyan-600 hover:to-purple-700 transition-all duration-300 shadow-lg hover:shadow-xl">
+            Subscribe
+          </button>
+        </div>
       </div>
 
-      {/* Product */}
+      {/* Quick Links */}
       <div>
-        <h3 className="font-semibold text-gray-900 dark:text-white mb-4">Produkt</h3>
-        <ul className="space-y-3">
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Funkcje</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Cennik</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Dokumentacja</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">API</a></li>
-        </ul>
+        <h3 className="text-white font-semibold mb-6">Platform</h3>
+        <nav className="space-y-3">
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Features
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Pricing
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Integrations
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            API Docs
+          </a>
+        </nav>
       </div>
 
-      {/* Company */}
+      {/* Company Links */}
       <div>
-        <h3 className="font-semibold text-gray-900 dark:text-white mb-4">Firma</h3>
-        <ul className="space-y-3">
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">O nas</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Blog</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Kariera</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Kontakt</a></li>
-        </ul>
+        <h3 className="text-white font-semibold mb-6">Company</h3>
+        <nav className="space-y-3">
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            About Us
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Careers
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Press Kit
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Contact
+          </a>
+        </nav>
       </div>
 
-      {/* Support */}
+      {/* Support Links */}
       <div>
-        <h3 className="font-semibold text-gray-900 dark:text-white mb-4">Wsparcie</h3>
-        <ul className="space-y-3">
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Pomoc</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Status</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Społeczność</a></li>
-          <li><a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors text-sm">Zgłoś błąd</a></li>
-        </ul>
+        <h3 className="text-white font-semibold mb-6">Support</h3>
+        <nav className="space-y-3">
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Help Center
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Community
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Tutorials
+          </a>
+          <a href="#" className="block text-slate-300 hover:text-cyan-400 transition-colors duration-300 text-sm">
+            Status Page
+          </a>
+        </nav>
       </div>
     </div>
 
     {/* Bottom Section */}
-    <div className="flex flex-col md:flex-row justify-between items-center pt-8 mt-8 border-t border-gray-200 dark:border-gray-800">
-      <p className="text-gray-600 dark:text-gray-400 text-sm">
-        © 2025 Brand. Wszystkie prawa zastrzeżone.
-      </p>
-      
-      <div className="flex items-center space-x-6 mt-4 md:mt-0">
-        {/* Social Icons */}
-        <a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors">
-          <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
-          </svg>
-        </a>
-        
-        <a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors">
-          <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"/>
-          </svg>
-        </a>
-        
-        <a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors">
-          <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-          </svg>
-        </a>
-        
-        <a href="#" className="text-gray-600 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white transition-colors">
-          <svg className="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.097.118.112.222.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.744-1.378l-.747 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.624 0 11.99-5.367 11.99-11.99C24.007 5.367 18.641.001 12.017.001z"/>
-          </svg>
-        </a>
+    <div className="border-t border-white/10 pt-8">
+      <div className="flex flex-col lg:flex-row justify-between items-center space-y-6 lg:space-y-0">
+        {/* Copyright */}
+        <div className="flex items-center space-x-4">
+          <p className="text-slate-400 text-sm">
+            © 2025 Nexus. All rights reserved.
+          </p>
+          <div className="flex items-center space-x-4 text-xs">
+            <a href="#" className="text-slate-400 hover:text-white transition-colors">
+              Privacy Policy
+            </a>
+            <span className="text-slate-600">•</span>
+            <a href="#" className="text-slate-400 hover:text-white transition-colors">
+              Terms of Service
+            </a>
+          </div>
+        </div>
+
+        {/* Social Links */}
+        <div className="flex items-center space-x-4">
+          <span className="text-slate-400 text-sm mr-2">Follow us:</span>
+          
+          <a href="#" className="w-10 h-10 bg-white/10 hover:bg-cyan-500/20 rounded-lg flex items-center justify-center transition-all duration-300 group">
+            <svg className="w-5 h-5 text-slate-300 group-hover:text-cyan-400 transition-colors" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/>
+            </svg>
+          </a>
+          
+          <a href="#" className="w-10 h-10 bg-white/10 hover:bg-purple-500/20 rounded-lg flex items-center justify-center transition-all duration-300 group">
+            <svg className="w-5 h-5 text-slate-300 group-hover:text-purple-400 transition-colors" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+            </svg>
+          </a>
+          
+          <a href="#" className="w-10 h-10 bg-white/10 hover:bg-pink-500/20 rounded-lg flex items-center justify-center transition-all duration-300 group">
+            <svg className="w-5 h-5 text-slate-300 group-hover:text-pink-400 transition-colors" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 5.079 3.158 9.417 7.618 11.174-.105-.949-.199-2.403.041-3.439.219-.937 1.406-5.957 1.406-5.957s-.359-.72-.359-1.781c0-1.663.967-2.911 2.168-2.911 1.024 0 1.518.769 1.518 1.688 0 1.029-.653 2.567-.992 3.992-.285 1.193.6 2.165 1.775 2.165 2.128 0 3.768-2.245 3.768-5.487 0-2.861-2.063-4.869-5.008-4.869-3.41 0-5.409 2.562-5.409 5.199 0 1.033.394 2.143.889 2.741.097.118.112.222.085.345-.09.375-.293 1.199-.334 1.363-.053.225-.172.271-.402.165-1.495-.69-2.433-2.878-2.433-4.646 0-3.776 2.748-7.252 7.92-7.252 4.158 0 7.392 2.967 7.392 6.923 0 4.135-2.607 7.462-6.233 7.462-1.214 0-2.357-.629-2.744-1.378l-.747 2.848c-.269 1.045-1.004 2.352-1.498 3.146 1.123.345 2.306.535 3.55.535 6.624 0 11.99-5.367 11.99-11.99C24.007 5.367 18.641.001 12.017.001z"/>
+            </svg>
+          </a>
+          
+          <a href="#" className="w-10 h-10 bg-white/10 hover:bg-orange-500/20 rounded-lg flex items-center justify-center transition-all duration-300 group">
+            <svg className="w-5 h-5 text-slate-300 group-hover:text-orange-400 transition-colors" fill="currentColor" viewBox="0 0 24 24">
+              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
   </div>
